antlr/SQLiteParser.js
// Generated from SQLiteParser.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from 'antlr4';
import SQLiteParserListener from './SQLiteParserListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export class SQLiteParser extends antlr4.Parser {

    static grammarFileName = "SQLiteParser.g4";
    static literalNames = [ null, "';'", "'.'", "'('", "')'", "','", "'='", 
                            "'*'", "'+'", "'-'", "'~'", "'||'", "'/'", "'%'", 
                            "'<<'", "'>>'", "'&'", "'|'", "'<'", "'<='", 
                            "'>'", "'>='", "'=='", "'!='", "'<>'" ];
    static symbolicNames = [ null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", 
                             "COMMA", "ASSIGN", "STAR", "PLUS", "MINUS", 
                             "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", 
                             "AMP", "PIPE", "LT", "LT_EQ", "GT", "GT_EQ", 
                             "EQ", "NOT_EQ1", "NOT_EQ2", "ABORT_", "ACTION_", 
                             "ADD_", "AFTER_", "ALL_", "ALTER_", "ANALYZE_", 
                             "AND_", "AS_", "ASC_", "ATTACH_", "AUTOINCREMENT_", 
                             "BEFORE_", "BEGIN_", "BETWEEN_", "BY_", "CASCADE_", 
                             "CASE_", "CAST_", "CHECK_", "COLLATE_", "COLUMN_", 
                             "COMMIT_", "CONFLICT_", "CONSTRAINT_", "CREATE_", 
                             "CROSS_", "CURRENT_DATE_", "CURRENT_TIME_", 
                             "CURRENT_TIMESTAMP_", "DATABASE_", "DEFAULT_", 
                             "DEFERRABLE_", "DEFERRED_", "DELETE_", "DESC_", 
                             "DETACH_", "DISTINCT_", "DROP_", "EACH_", "ELSE_", 
                             "END_", "ESCAPE_", "EXCEPT_", "EXCLUSIVE_", 
                             "EXISTS_", "EXPLAIN_", "FAIL_", "FOR_", "FOREIGN_", 
                             "FROM_", "FULL_", "GLOB_", "GROUP_", "HAVING_", 
                             "IF_", "IGNORE_", "IMMEDIATE_", "IN_", "INDEX_", 
                             "INDEXED_", "INITIALLY_", "INNER_", "INSERT_", 
                             "INSTEAD_", "INTERSECT_", "INTO_", "IS_", "ISNULL_", 
                             "JOIN_", "KEY_", "LEFT_", "LIKE_", "LIMIT_", 
                             "MATCH_", "NATURAL_", "NO_", "NOT_", "NOTNULL_", 
                             "NULL_", "OF_", "OFFSET_", "ON_", "OR_", "ORDER_", 
                             "OUTER_", "PLAN_", "PRAGMA_", "PRIMARY_", "QUERY_", 
                             "RAISE_", "RECURSIVE_", "REFERENCES_", "REGEXP_", 
                             "REINDEX_", "RELEASE_", "RENAME_", "REPLACE_", 
                             "RESTRICT_", "RIGHT_", "ROLLBACK_", "ROW_", 
                             "ROWS_", "SAVEPOINT_", "SELECT_", "SET_", "TABLE_", 
                             "TEMP_", "TEMPORARY_", "THEN_", "TO_", "TRANSACTION_", 
                             "TRIGGER_", "UNION_", "UNIQUE_", "UPDATE_", 
                             "USING_", "VACUUM_", "VALUES_", "VIEW_", "VIRTUAL_", 
                             "WHEN_", "WHERE_", "WITH_", "WITHOUT_", "FIRST_VALUE_", 
                             "OVER_", "PARTITION_", "RANGE_", "PRECEDING_", 
                             "UNBOUNDED_", "CURRENT_", "FOLLOWING_", "CUME_DIST_", 
                             "DENSE_RANK_", "LAG_", "LAST_VALUE_", "LEAD_", 
                             "NTH_VALUE_", "NTILE_", "PERCENT_RANK_", "RANK_", 
                             "ROW_NUMBER_", "GENERATED_", "ALWAYS_", "STORED_", 
                             "TRUE_", "FALSE_", "WINDOW_", "NULLS_", "FIRST_", 
                             "LAST_", "FILTER_", "GROUPS_", "EXCLUDE_", 
                             "TIES_", "OTHERS_", "DO_", "NOTHING_", "IDENTIFIER", 
                             "NUMERIC_LITERAL", "BIND_PARAMETER", "STRING_LITERAL", 
                             "BLOB_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
                             "SPACES", "UNEXPECTED_CHAR" ];
    static ruleNames = [ "parse", "sql_stmt_list", "sql_stmt", "alter_table_stmt", 
                         "analyze_stmt", "attach_stmt", "begin_stmt", "commit_stmt", 
                         "rollback_stmt", "savepoint_stmt", "release_stmt", 
                         "create_index_stmt", "indexed_column", "create_table_stmt", 
                         "column_def", "type_name", "column_constraint", 
                         "signed_number", "table_constraint", "foreign_key_clause", 
                         "conflict_clause", "create_trigger_stmt", "create_view_stmt", 
                         "create_virtual_table_stmt", "with_clause", "cte_table_name", 
                         "recursive_cte", "common_table_expression", "delete_stmt", 
                         "delete_stmt_limited", "detach_stmt", "drop_stmt", 
                         "expr", "raise_function", "literal_value", "insert_stmt", 
                         "upsert_clause", "pragma_stmt", "pragma_value", 
                         "reindex_stmt", "select_stmt", "join_clause", "select_core", 
                         "factored_select_stmt", "simple_select_stmt", "compound_select_stmt", 
                         "table_or_subquery", "result_column", "join_operator", 
                         "join_constraint", "compound_operator", "update_stmt", 
                         "column_name_list", "update_stmt_limited", "qualified_table_name", 
                         "vacuum_stmt", "filter_clause", "window_defn", 
                         "over_clause", "frame_spec", "frame_clause", "simple_function_invocation", 
                         "aggregate_function_invocation", "window_function_invocation", 
                         "common_table_stmt", "order_by_stmt", "limit_stmt", 
                         "ordering_term", "asc_desc", "frame_left", "frame_right", 
                         "frame_single", "window_function", "of_OF_fset", 
                         "default_DEFAULT__value", "partition_by", "order_by_expr", 
                         "order_by_expr_asc_desc", "expr_asc_desc", "initial_select", 
                         "recursive__select", "unary_operator", "error_message", 
                         "module_argument", "column_alias", "keyword", "name", 
                         "function_name", "schema_name", "table_name", "table_or_index_name", 
                         "new_table_name", "column_name", "collation_name", 
                         "foreign_table", "index_name", "trigger_name", 
                         "view_name", "module_name", "pragma_name", "savepoint_name", 
                         "table_alias", "transaction_name", "window_name", 
                         "alias", "filename", "base_window_name", "simple_func", 
                         "aggregate_func", "table_function_name", "any_name" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SQLiteParser.ruleNames;
        this.literalNames = SQLiteParser.literalNames;
        this.symbolicNames = SQLiteParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 32:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 20);
    		case 1:
    			return this.precpred(this._ctx, 19);
    		case 2:
    			return this.precpred(this._ctx, 18);
    		case 3:
    			return this.precpred(this._ctx, 17);
    		case 4:
    			return this.precpred(this._ctx, 16);
    		case 5:
    			return this.precpred(this._ctx, 15);
    		case 6:
    			return this.precpred(this._ctx, 14);
    		case 7:
    			return this.precpred(this._ctx, 13);
    		case 8:
    			return this.precpred(this._ctx, 6);
    		case 9:
    			return this.precpred(this._ctx, 5);
    		case 10:
    			return this.precpred(this._ctx, 9);
    		case 11:
    			return this.precpred(this._ctx, 8);
    		case 12:
    			return this.precpred(this._ctx, 7);
    		case 13:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	parse() {
	    let localctx = new ParseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SQLiteParser.RULE_parse);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 225;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << SQLiteParser.SCOL) | (1 << SQLiteParser.ALTER_) | (1 << SQLiteParser.ANALYZE_))) !== 0) || ((((_la - 35)) & ~0x1f) == 0 && ((1 << (_la - 35)) & ((1 << (SQLiteParser.ATTACH_ - 35)) | (1 << (SQLiteParser.BEGIN_ - 35)) | (1 << (SQLiteParser.COMMIT_ - 35)) | (1 << (SQLiteParser.CREATE_ - 35)) | (1 << (SQLiteParser.DEFAULT_ - 35)) | (1 << (SQLiteParser.DELETE_ - 35)) | (1 << (SQLiteParser.DETACH_ - 35)) | (1 << (SQLiteParser.DROP_ - 35)) | (1 << (SQLiteParser.END_ - 35)))) !== 0) || _la===SQLiteParser.EXPLAIN_ || _la===SQLiteParser.INSERT_ || ((((_la - 112)) & ~0x1f) == 0 && ((1 << (_la - 112)) & ((1 << (SQLiteParser.PRAGMA_ - 112)) | (1 << (SQLiteParser.REINDEX_ - 112)) | (1 << (SQLiteParser.RELEASE_ - 112)) | (1 << (SQLiteParser.REPLACE_ - 112)) | (1 << (SQLiteParser.ROLLBACK_ - 112)) | (1 << (SQLiteParser.SAVEPOINT_ - 112)) | (1 << (SQLiteParser.SELECT_ - 112)) | (1 << (SQLiteParser.UPDATE_ - 112)) | (1 << (SQLiteParser.VACUUM_ - 112)) | (1 << (SQLiteParser.VALUES_ - 112)))) !== 0) || _la===SQLiteParser.WITH_) {
	            this.state = 222;
	            this.sql_stmt_list();
	            this.state = 227;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 228;
	        this.match(SQLiteParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sql_stmt_list() {
	    let localctx = new Sql_stmt_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SQLiteParser.RULE_sql_stmt_list);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 233;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===SQLiteParser.SCOL) {
	            this.state = 230;
	            this.match(SQLiteParser.SCOL);
	            this.state = 235;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 236;
	        this.sql_stmt();
	        this.state = 245;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 238; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                do {
	                    this.state = 237;
	                    this.match(SQLiteParser.SCOL);
	                    this.state = 240; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                } while(_la===SQLiteParser.SCOL);
	                this.state = 242;
	                this.sql_stmt(); 
	            }
	            this.state = 247;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	        }

	        this.state = 251;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 248;
	                this.match(SQLiteParser.SCOL); 
	            }
	            this.state = 253;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sql_stmt() {
	    let localctx = new Sql_stmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SQLiteParser.RULE_sql_stmt);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===SQLiteParser.EXPLAIN_) {
	            this.state = 254;
	            this.match(SQLiteParser.EXPLAIN_);
	            this.state = 257;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===SQLiteParser.QUERY_) {
	                this.state = 255;
	                this.match(SQLiteParser.QUERY_);
	                this.state = 256;
	                this.match(SQLiteParser.PLAN_);
	            }

	        }

	        this.state = 285;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 261;
	            this.alter_table_stmt();
	            break;

	        case 2:
	            this.state = 262;
	            this.analyze_stmt();
	            break;

	        case 3:
	            this.state = 263;
	            this.attach_stmt();
	            break;

	        case 4:
	            this.state = 264;
	            this.begin_stmt();
	            break;

	        case 5:
	            this.state = 265;
	            this.commit_stmt();
	            break;
